src/index.scss
@import "~normalize.css/";

@import "./routes/index";
@import "./oldSketchStyles";

* {
    box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
	font-family: $palatino-family;
}

a {
    color: $dark-gray1;
    text-decoration: none;
    transition: border-bottom .05s;

    &:hover {
        border-bottom: 2px solid $black;
    }
}

// fully fills its parent
.sketch-component {
    width: 100%;
    height: 100%;
}

